--- a/Lab 01-02/Exercise_3/index.html
+++ b/Lab 01-02/Exercise_3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise 3</title>
-    <link rel="stylesheet" href="/Exercise_3/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <table>
