--- a/Lab 01-02/Exercise_4/index.html
+++ b/Lab 01-02/Exercise_4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise 4</title>
-    <link rel="stylesheet" href="../Exercise_4/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js" type="text/javascript"></script>
 </head>
@@ -164,6 +164,6 @@
             </div>
         </div>
     </form>
-    <script src="../Exercise_4/js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
